kube-yaml/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello2
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 3000
  selector:
    run: label2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress5
spec:
  # backend:
  #   serviceName: hello2
  #   servicePort: 80
  rules:
    - http:
        paths:
        - path: /*
          pathType: Prefix
          backend:
            service:
              name: hello2
              port: 
                number: 80
  #       - path: /*
  #         backend:
  #           serviceName: pyweb
  #           servicePort: 8888
